migrate to spring 2.7.6